force-app/main/default/objects/Setup_Change__c/Setup_Change__c.object-meta.xml
<CustomObject>
    <description>Imported Salesforce Setup Audit Trail entries for reporting, retention, and alerting.</description>
    <label>Setup Change</label>
    <nameField>
        <displayFormat>SC-{000000}</displayFormat>
        <label>Setup Change Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Setup Changes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>