force-app/main/default/objects/Setup_Change__c/fields/Action__c.field-meta.xml
<CustomField>
    <fullName>Action__c</fullName>
    <description>Setup Audit Trail action value.</description>
    <label>Action</label>
    <length>255</length>
    <type>Text</type>
</CustomField>