force-app/main/default/objects/Setup_Change__c/fields/Audit_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Audit_Created_Date__c</fullName>
    <description>CreatedDate from the original SetupAuditTrail record.</description>
    <label>Audit Created Date</label>
    <type>DateTime</type>
</CustomField>