force-app/main/default/objects/Setup_Change__c/fields/Audit_Trail_Id__c.field-meta.xml
<CustomField>
    <fullName>Audit_Trail_Id__c</fullName>
    <description>Original SetupAuditTrail record Id. Used as the external id for idempotent syncs.</description>
    <externalId>true</externalId>
    <label>Audit Trail Id</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>