force-app/main/default/objects/Setup_Change__c/fields/Created_By_Email__c.field-meta.xml
<CustomField>
    <fullName>Created_By_Email__c</fullName>
    <description>Email of the user recorded on the SetupAuditTrail entry.</description>
    <label>Created By Email</label>
    <length>255</length>
    <type>Email</type>
</CustomField>