force-app/main/default/objects/Setup_Change__c/fields/Created_By_Id__c.field-meta.xml
<CustomField>
    <fullName>Created_By_Id__c</fullName>
    <description>Id of the user recorded on the SetupAuditTrail entry.</description>
    <label>Created By Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>