force-app/main/default/objects/Setup_Change__c/fields/Created_By_Name__c.field-meta.xml
<CustomField>
    <fullName>Created_By_Name__c</fullName>
    <description>Name of the user recorded on the SetupAuditTrail entry.</description>
    <label>Created By Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>