force-app/main/default/objects/Setup_Change__c/fields/Created_By_Profile_Name__c.field-meta.xml
<CustomField>
    <fullName>Created_By_Profile_Name__c</fullName>
    <description>Profile name for the SetupAuditTrail created-by user at sync time.</description>
    <label>Created By Profile Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>