force-app/main/default/objects/Setup_Change__c/fields/Delegate_User__c.field-meta.xml
<CustomField>
    <fullName>Delegate_User__c</fullName>
    <description>DelegateUser value from SetupAuditTrail, when Salesforce records one.</description>
    <label>Delegate User</label>
    <length>255</length>
    <type>Text</type>
</CustomField>