force-app/main/default/objects/Setup_Change__c/fields/Display__c.field-meta.xml
<CustomField>
    <fullName>Display__c</fullName>
    <description>Human-readable Setup Audit Trail detail text.</description>
    <label>Display</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>