force-app/main/default/objects/Setup_Change__c/fields/Responsible_Namespace_Prefix__c.field-meta.xml
<CustomField>
    <fullName>Responsible_Namespace_Prefix__c</fullName>
    <description>Namespace prefix Salesforce associates with the setup change, when available.</description>
    <label>Responsible Namespace Prefix</label>
    <length>255</length>
    <type>Text</type>
</CustomField>