force-app/main/default/objects/Setup_Change__c/fields/Section__c.field-meta.xml
<CustomField>
    <fullName>Section__c</fullName>
    <description>Setup area where the audited change occurred.</description>
    <label>Section</label>
    <length>255</length>
    <type>Text</type>
</CustomField>