force-app/main/default/objects/Setup_Change__c/listViews/Recent_Setup_Changes.listView-meta.xml
<ListView>
    <fullName>Recent_Setup_Changes</fullName>
    <columns>NAME</columns>
    <columns>Audit_Created_Date__c</columns>
    <columns>Action__c</columns>
    <columns>Section__c</columns>
    <columns>Created_By_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>Recent Setup Changes</label>
    <sortColumn>Audit_Created_Date__c</sortColumn>
    <sortOrder>Descending</sortOrder>
</ListView>